[code]
[b]v1.9.0[/b]: [url=https://bitbucket.org/so-rose/convmlv/src]https://bitbucket.org/so-rose/convmlv/src[/url]
[size=8pt]*Sane Argument Parsing! You can now choose to use spaces![/size]
[size=8pt]*DNG: Multithreaded mlv_dump with progress bar![/size]
[size=8pt]*Config File: Can now use a global config file in $HOME/convmlv.conf with select options. More to come later![/size]
[size=8pt]*Misc: Auto threads on Linux, use s and e in frame range, better help, more error checking/bug fixes.[/size]

[b]v1.8.1[/b]: [url=https://bitbucket.org/so-rose/convmlv/src]https://bitbucket.org/so-rose/convmlv/src[/url]
[size=8pt]*Specify Frame Range to develop! Note that this will still develop all DNGs; however, if you specify the dng_ folder of a previous run as the argument, it'll reuse those DNGs without redevelopment. This works for Dual ISO as well.[/size]
[size=8pt]* Camera WB is now default.[/size]

[b]v1.8.0[/b]:MASSIVE BUG FIX. [url=https://bitbucket.org/so-rose/convmlv/src]https://bitbucket.org/so-rose/convmlv/src[/url]
[size=8pt]*Dark Level Aware!!! This is a bug fix so big that [color=red]all previous versions are basically unusable [/color] (you'd sometimes find a magenta or green cast; fixable but very, very bad).[/size]
[size=8pt]*Color Space Output! Gone is the "gamma curve" of old; gamma and output color spaces are now synchronized.[/size]
[size=8pt]*Chroma Smoothing! Uses 2x2, 3x3, or 5x5; works perfectly with Dual ISO as well.[/size]
[size=8pt]*More features: Use badpixels file without generating one, print out footage attributes (simple stuff for now, and only works on MLV for now).

[b]v1.7.1[/b]:[url=https://bitbucket.org/so-rose/convmlv/src]https://bitbucket.org/so-rose/convmlv/src[/url]
[size=8pt]*Use any DNG sequence as input now; just specify the folder.[/size]
[size=8pt]*Darkframe Subtraction! Simply specify the darkly recorded MLV with -F; it'll automatically be averaged and used.[/size]
