@@ -1,4 +1,4 @@
-CONFIG_NAME template
+CONFIG_NAME atadenoise-test
 
 # Comments start with #. See 'convmlv -h' for option documentation.
 
@@ -14,51 +14,36 @@ SRANGE /home/sofus/subhome/src/convmlv/sRange.py
 BAL /home/sofus/subhome/src/convmlv/balance.py
 PYTHON python3
 
-THREADS 7
+#~ THREADS 1
 
 ### <------------------ OUTPUT OPTIONS ------------------>
 IMAGE
 IMG_FMT 0
 
-#MOVIE
+#~ MOVIE
 
 PROXY 0
-PROXY_SCALE 50%
+#~ PROXY_SCALE 50%
 
 KEEP_DNGS
 
-FRAME_RANGE s-e
+FRAME_RANGE 300-350
 #UNCOMP
 
 ### <------------------ RAW OPTIONS ------------------>
 
-DEMO_MODE 3
-#FOUR_COLOR
+DEMO_MODE 2
 
 HIGHLIGHT_MODE 0
+#~ TEMP_NOISE 0.15-0.04
 
-CHROMA_SMOOTH 1
-WAVE_NOISE 50
-TEMP_NOISE 0.03-0.04
-
-SPACE 3
-#SHALLOW
+SPACE 0
 
 ### <------------------ COLOR OPTIONS ------------------>
 
-WHITE 0
-
-#LUT lut.cube
-
-#SATPOINT 15000
-
-#WHITE_SPD 20
-#WHITE_CLIP
+WHITE 1
 
 ### <------------------ FEATURE OPTIONS ------------------>
-#DUAL_ISO
-
-BADPIXELS
-#BADPIXEL_PATH ./7D_badpixels.txt
 
 #DARKFRAME ./df.darkframe
+#~ LUT /home/sofus/subhome/src/convmlv/test_footage/girl_lut_test.cube
