@@ -22,7 +22,7 @@ DEMO_MODE 3
 HIGHLIGHT_MODE 0
 
 CHROMA_SMOOTH 1
-NOISE_REDUC 50
+WAVE_NOISE 50
 
 SPACE 0
 #SHALLOW
