@@ -11,7 +11,7 @@ FRAME_RANGE s-e
 / cool_files
 	MOVIE
 	FRAME_RANGE 1-10
-	NOISE_REDUC 50
+	WAVE_NOISE 50
 *
 / 700D_mv1080_1728x1158
 	IMAGE
